Fix CSS bugs with box-shadows and nodelist height
- Rename .pipeline-nodelist to .pipeline-nodelist-container because the former class was already used
- Remove existing .pipeline-nodelist-container element because it's unnecessary
- Move search drop-shadow to a generated-content element with a gradient, so that it won't leak out of the container onto the sidebar or its scrollbar
- Increase the z-index of the main pipeline-ui element so that the drop-shadow will sit atop the icon toolbar

--- a/src/components/node-list/styles/_search.scss
+++ b/src/components/node-list/styles/_search.scss
@@ -1,15 +1,5 @@
 .pipeline-nodelist-search {
   position: relative;
-  z-index: 1;
-  margin: 0 -6px;
-
-  .kui-theme--dark & {
-    box-shadow: 0 14px 18px $color-bg-dark-3;
-  }
-
-  .kui-theme--light & {
-    box-shadow: 0 14px 18px $color-bg-light-3;
-  }
 
   .kui-searchbar,
   .kui-input-wrapper {
@@ -134,6 +124,5 @@
 }
 
 .pipeline-nodelist-search-inner {
-  margin-bottom: -6px;
-  padding: 2px $sidebar-padding 6px $sidebar-padding;
+  padding: 2px ($sidebar-padding - 0.6) 0 ($sidebar-padding - 0.6);
 }
