--- a/src/components/pipeline-list/pipeline-list.scss
+++ b/src/components/pipeline-list/pipeline-list.scss
@@ -46,7 +46,7 @@
 
     .kui-theme--light & {
       background: $color-bg-light-3;
-      box-shadow: 0 1px 1px rgba(black, 0.03);
+      box-shadow: 0 0 2px rgba(black, 0.1);
     }
 
     .kui-theme--dark & {
